<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/clock"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="saat"/>
    <Button
        android:layout_marginLeft="5dp"
        android:id="@+id/save"
        android:text="@string/save"
        android:background="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">
    <TextView
        android:textColor="@android:color/background_dark"
        android:layout_marginBottom="15dp"
        android:text="@string/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt1"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/TL"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt2"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt3"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/USD"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt4"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt5"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/CAD"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt6"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>

</LinearLayout>